add initial support for services
