# python-flask-server/swagger_server/swagger/swagger.yaml
@@ -15,6 +15,8 @@ tags:
   description: "Register/unregister users"
 - name: "pipeline"
   description: "Operations on pipelines"
+- name: "service"
+  description: "Operations on services"
 schemes:
 - "https"
 - "http"
@@ -121,7 +123,7 @@ paths:
         "401":
           description: "Unauthorized"
         "404":
-          description: "Pipeline not found"
+          description: "User or Pipeline not found"
       x-swagger-router-controller: "swagger_server.controllers.pipeline_controller"
     post:
       tags:
@@ -173,7 +175,7 @@ paths:
         "401":
           description: "Unauthorized"
         "404":
-          description: "Pipeline not found"
+          description: "User or Pipeline not found"
       x-swagger-router-controller: "swagger_server.controllers.pipeline_controller"
   /pipeline/all:
     get:
@@ -203,6 +205,116 @@ paths:
         "400":
           description: "Bad Request"
       x-swagger-router-controller: "swagger_server.controllers.pipeline_controller"
+  /service:
+    get:
+      tags:
+      - "service"
+      summary: "Return details of specified service"
+      description: ""
+      operationId: "get_service"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "Parameters to get a service"
+        required: true
+        schema:
+          $ref: "#/definitions/GetService"
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/ServiceInfo"
+        "400":
+          description: "Bad Request"
+        "401":
+          description: "Unauthorized"
+        "404":
+          description: "User or Service not found"
+      x-swagger-router-controller: "swagger_server.controllers.service_controller"
+    post:
+      tags:
+      - "service"
+      summary: "Register a new service"
+      description: ""
+      operationId: "create_service"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "Parameters to register service"
+        required: true
+        schema:
+          $ref: "#/definitions/CreateService"
+      responses:
+        "201":
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/ServiceMetadata"
+        "400":
+          description: "Bad Request"
+        "401":
+          description: "Unauthorized"
+      x-swagger-router-controller: "swagger_server.controllers.service_controller"
+    delete:
+      tags:
+      - "service"
+      summary: "Delete a service"
+      description: ""
+      operationId: "delete_service"
+      consumes:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "Parameters to delete a service"
+        required: true
+        schema:
+          $ref: "#/definitions/GetService"
+      responses:
+        "204":
+          description: "Service deleted successfully"
+        "400":
+          description: "Bad Request"
+        "401":
+          description: "Unauthorized"
+        "404":
+          description: "User or Service not found"
+      x-swagger-router-controller: "swagger_server.controllers.service_controller"
+  /service/all:
+    get:
+      tags:
+      - "service"
+      summary: "List all of the User's services"
+      description: ""
+      operationId: "list_services"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: ""
+        required: true
+        schema:
+          $ref: "#/definitions/User"
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/ServiceInfo"
+        "400":
+          description: "Bad Request"
+      x-swagger-router-controller: "swagger_server.controllers.service_controller"
 definitions:
   User:
     type: "object"
@@ -265,12 +377,9 @@ definitions:
         type: "string"
       inputTopic:
         type: "string"
-      outputTopic:
-        type: "string"
     xml:
       name: "PipelineMetadata"
     example:
-      outputTopic: "outputTopic"
       inputTopic: "inputTopic"
       pipelineId: "pipelineId"
   PipelineInfo:
@@ -285,7 +394,70 @@ definitions:
       name: "PipelineInfo"
     example:
       pipelineMetadata:
-        outputTopic: "outputTopic"
         inputTopic: "inputTopic"
         pipelineId: "pipelineId"
       pipelineDefinition: "{}"
+  CreateService:
+    type: "object"
+    properties:
+      userInfo:
+        $ref: "#/definitions/User"
+      deploymentDefinition:
+        type: "object"
+        properties: {}
+      serviceDefinition:
+        type: "object"
+        properties: {}
+    xml:
+      name: "CreateService"
+    example:
+      userInfo:
+        authToken: "authToken"
+        userId: "userId"
+      serviceDefinition: "{}"
+      deploymentDefinition: "{}"
+  GetService:
+    type: "object"
+    properties:
+      userInfo:
+        $ref: "#/definitions/User"
+      serviceId:
+        type: "string"
+    xml:
+      name: "GetService"
+    example:
+      userInfo:
+        authToken: "authToken"
+        userId: "userId"
+      serviceId: "serviceId"
+  ServiceMetadata:
+    type: "object"
+    properties:
+      serviceId:
+        type: "string"
+      ipAddress:
+        type: "string"
+    xml:
+      name: "ServiceMetadata"
+    example:
+      ipAddress: "ipAddress"
+      serviceId: "serviceId"
+  ServiceInfo:
+    type: "object"
+    properties:
+      serviceMetadata:
+        $ref: "#/definitions/ServiceMetadata"
+      deploymentDefinition:
+        type: "object"
+        properties: {}
+      serviceDefinition:
+        type: "object"
+        properties: {}
+    xml:
+      name: "ServiceInfo"
+    example:
+      serviceDefinition: "{}"
+      deploymentDefinition: "{}"
+      serviceMetadata:
+        ipAddress: "ipAddress"
+        serviceId: "serviceId"
